# models/auth.go
@@ -17,13 +17,6 @@ type OTPJson struct {
 	OTP      string `json:"otp" structs:"otp"`
 }
 
-type ApiKeyData struct {
-	Username         string `json:"username"`
-	APIKey           string `json:"api_key"`
-	PhoneIslandToken string `json:"phone_island_token"`
-	Subtype          string `json:"subtype"`
-}
-
 type LoginJson struct {
 	Username string `json:"username" structs:"username"`
 	Password string `json:"password" structs:"password"`
